# LAMBO4J

./: .gitignore  LICENSE  README.md
cpp/: CMakeLists.txt
cpp/cmake/: build-info.cmake
cpp/lambo4j/: CMakeLists.txt  com_renemrhfr_lambo4j_LanguageModel.h  jni_implementation.cpp  llamawrapper.cpp  llamawrapper.h
cpp/llamacpp/: README.md
cpp/llamacpp/common/: CMakeLists.txt
cpp/llamacpp/ggml/: CMakeLists.txt
cpp/llamacpp/ggml/src/ggml-kompute/: CMakeLists.txt
cpp/llamacpp/ggml/src/ggml-opencl/: CMakeLists.txt
cpp/llamacpp/ggml/src/ggml-vulkan/: CMakeLists.txt
cpp/llamacpp/src/: CMakeLists.txt
java/: pom.xml
java/src/main/java/com/renemrhfr/lambo4j/: ChatMessage.java  LanguageModel.java  Main.java  NativeLibraryLoader.java  TokenCallback.java
java/src/main/resources/native/macos-arm64/: README.md
java/src/main/resources/native/win-x86_x64/: README.md
models/: README.md
